frontend works with js

--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -4,6 +4,7 @@
 	</div>
 </div> -->
 <div class="row moral-justification" ng-controller="CloudCtrl">
+{{users}}
 	<div class="col-sm-8 well">
 		
 		<!-- {{skills}} -->
