--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 		<!-- // <script src="application/listings/controllers/ListingsCtrl.js"></script> -->
 		<!-- // Cloud Plugin -->
 		<script src="application/listings/plugins/CloudDirective.js"></script>
+		<script src="application/listings/plugins/CloudFactory.js"></script>
 		<script src="application/listings/plugins/CloudCtrl.js"></script>
 
 
