--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -4,9 +4,9 @@
 	</div>
 </div> -->
 <div class="row moral-justification" ng-controller="CloudCtrl">
-{{users}}
-	<div class="col-sm-8 well">
-		
+	<div class="col-sm-8">
+		<div class="skills-list">
+		<p>loading bar</p>
 		<!-- {{skills}} -->
 		<button class="tc tc-{{skill.weight}}" 
 			ng-click="addFilter(skill.text)" 
@@ -17,6 +17,7 @@
 		<!-- <cloud skills="{{skills}}"></cloud> -->
 		<!-- <cloud ng-repeat="skill in skills" value="{{skill.weight}}" skill="{{skill.text}}"> -->
 
+		</div>
 	</div>
 	<div class="col-sm-4">
 		<div class="well">
