--- a/index.html
+++ b/index.html
@@ -81,25 +81,17 @@
 		<script src="vendor/jquery/dist/jquery.js"></script>
 		<!-- Underscore 1.7.0 -->
 		<script src="vendor/underscore/underscore.js"></script>
-		
-
-<!-- Firebase -->
-<script src="https://cdn.firebase.com/js/client/1.0.21/firebase.js"></script>
-		<!-- // <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script> -->
-
-<!-- AngularFire -->
-<script src="https://cdn.firebase.com/libs/angularfire/0.8.2/angularfire.min.js"></script>
-<script src="https://cdn.firebase.com/js/simple-login/1.6.3/firebase-simple-login.js"></script>	
-
+		<!-- Firebase -->
+		<script src="vendor/firebase/firebase.js"></script>
+		<!-- Firebase Simple Login -->
+		<script src="vendor/firebase-simple-login/firebase-simple-login.js"></script>	
+		<!-- AngularFire -->
+		<script src="vendor/angularfire/dist/angularfire.min.js"></script>
+		<!-- jQCloud -->
+		<script src="application/listings/plugins/jQCloud.js"></script>
 
 
-
-		// <script src="application/listings/plugins/jQCloud.js"></script>
-
-		<!-- // <script src="//cdn.firebase.com/v0/firebase.js"></script>
-		// <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
-		// <script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
- -->
+		<!-- // ng-app -->
 		<script src="application/system.js"></script>
 
 		<!-- // System -->
@@ -120,12 +112,12 @@
 		<script src="application/listings/plugins/CloudCtrl.js"></script>
 
 
-		// Profile Controllers - ->
-		<!-- // <script src="application/profile/controllers/ProfileCtrl.js"></script> -->
+		<!-- // Profile Controllers -->
+		<script src="application/profile/controllers/ProfileCtrl.js"></script>
 		<!-- // <script src="application/profile/controllers/DreamsCtrl.js"></script> -->
 		<!-- // <script src="application/profile/controllers/SkillsCtrl.js"></script> -->
 		<!-- // <script src="application/profile/controllers/StatsCtrl.js"></script> -->
-		// Edit Profile - ->
+		<!-- // Edit Profile -->
 		<script src="application/profile/controllers/EditProfileCtrl.js"></script>
 		<script src="application/profile/controllers/EditSkillsCtrl.js"></script>
 		<script src="application/profile/directives/AccountDirective.js"></script>
