--- a/index.html
+++ b/index.html
@@ -22,37 +22,12 @@
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body class="system">
+	<body class="system" ng-controller="AuthCtrl">
 		
 		<systemheader></systemheader>
-<section ng-controller="MainCtrl">
-	<div class="row">
-		<div class="col-sm-8 col-sm-offset-2">
-			<!-- <button ng-click="change()">change</button> -->
-			<img class="beer-logo" src="img/beer-logo.png"/>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-sm-12">
-			<h3 class="register-title">Register Here</h3>
-			<form role="form">
-				<div class="form-group">
-					<input type="email" class="form-control" id="inputEmail" ng-model="registerData.email" placeholder="Email">
-				</div>
-				<div class="form-group">
-					<input type="text" class="form-control" id="inputUsername" ng-model="registerData.username" placeholder="Username">
-				</div>
-				<div class="form-group">
-					<input type="password" class="form-control" id="inputPassword" ng-model="registerData.password" placeholder="Password">
-				</div>
-				<button type="submit" class="btn btn-primary" ng-submit="login()" ng-click="login()">Log In</button> 
-				<button class="btn btn-default" ng-click="register()">Register</button>
-				<!-- <button type="submit" class="btn btn-primary" ng-submit="logout()" ng-click="logout()">Log Out</button>  -->
-				<img ng-show="loginBusy" src="img/loading.gif" style="margin: 0 10px;" />
-			</form>
-		</div>
-	</div>
-</section> 
+
+		<section ng-include="'application/system/auth/auth-register.html'"></section>
+
 		<section class="ui-view-container">
 		<route-loading-indicator />
 <!-- http://fgnass.github.io/spin.js/#?lines=7&length=40&width=30&radius=0&corners=0.1&rotate=80&trail=60&speed=0.6&direction=1 -->
@@ -100,6 +75,7 @@
 		<script src="application/system/footer/FooterCtrl.js"></script>
 		<script src="application/system/footer/FooterDirective.js"></script>
 		<!-- // System Auth- -> -->
+		<script src="application/system/auth/AuthFactory.js"></script>
 		<script src="application/system/auth/AuthCtrl.js"></script>
 		<!-- // System Api - ->
 		<script src="application/system/SystemApi.js"></script>
