resolve and service set up to return user data

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		<systemheader></systemheader>
 
-		<section ng-include="'application/system/auth/auth-register.html'"></section>
+		<!-- <section ng-include="'application/system/auth/auth-register.html'"></section> -->
 
 		<section class="ui-view-container">
 		<route-loading-indicator />
@@ -89,6 +89,7 @@
 
 
 		<!-- // Profile Controllers -->
+		<script src="application/profile/services/ProfileFactory.js"></script>
 		<script src="application/profile/controllers/ProfileCtrl.js"></script>
 		<!-- // <script src="application/profile/controllers/DreamsCtrl.js"></script> -->
 		<!-- // <script src="application/profile/controllers/SkillsCtrl.js"></script> -->
