--- a/application/profile/profile-dreams.html
+++ b/application/profile/profile-dreams.html
@@ -2,30 +2,15 @@
 	<div class="col-sm-12">
 		<section class="block">
 		<div class="profile_tabs">
-		    <a ui-sref="profile.view.experience">Experience</a>
-		    <a ui-sref="profile.view.introduction">Introduction</a>
+		    <!-- <a ui-sref="profile.view.experience">Experience</a> -->
+		    <!-- <a ui-sref="profile.view.introduction">Introduction</a> -->
 		    	
 		    <div class="profile_tab" heading="CV">
-				<div ui-view="dreamsInner" class="profile_animate">
-<!-- 					<img src="http://localhost/salad/application/systemimage/me/me.png" />
-					<img src="http://localhost/salad/application/systemimage/franzfafka/IMG_0002.jpg" />
-					<img src="http://localhost/salad/application/systemimage/.jpg" /> -->
-					<img src="http://localhost/salad/application/systemimage/urbanquack/e1.jpg" />
-					<img src="http://localhost/salad/application/systemimage/urbanquack/e2.jpg" />
-					<img src="http://localhost/salad/application/systemimage/urbanquack/e3.jpg" />
-					<img src="http://localhost/salad/application/systemimage/urbanquack/e4.jpg" />
-					<img src="http://localhost/salad/application/systemimage/urbanquack/e5.jpg" />
-					this is a placeholder
-				</div>
+				<!-- <div ui-view="dreamsInner" class="profile_animate"> -->
+					<p>{{profile.info}}</p>
+				<!-- </div> -->
 		    </div>
   		</div>
   		</section>
 	</div>
 </div>
-
-<!--     <tab select="alertMe()">
-      <tab-heading>
-        <i class="glyphicon glyphicon-bell"></i> Alert!
-      </tab-heading>
-      I've got an HTML heading, and a select callback. Pretty cool!
-    </tab> -->
