--- a/application/profile/profile-skills.html
+++ b/application/profile/profile-skills.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-12">
 		<section class="block new-line bottom">
 			<ul>
-				<li class="skill-list" ng-repeat="skill in user.skills">{{skill.name}}</li>
+				<li class="skill-list" ng-repeat="skill in skills" data-tooltip="{{skill.tooltip}}">{{skill.name}}</li>
 			</ul>
 	</div>
 </div>
