refactoring for easier testing - part2

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<script src="application/profile/weather/jquery.simpleWeather.js"></script>
 		<script src="application/profile/weather/WeatherDirective.js"></script>
 		<!-- // Ratings Plugin - ->
-		<!-- // <script src="application/profile/plugins/RatingsCtrl.js"></script>
+		<!-- // <script src="application/profile/plugins/RatingsCtrl.js"></script>-->
 
 	</body>
 </html>
