--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="application/system.css"/>
 		<link rel="stylesheet" href="application/system/animate.css"/>
+		<link rel="stylesheet" href="application/system/loader/loader.css"/>
 		<link rel="stylesheet" href="application/profile/less/account.css"/>
 		<!-- should be compiled less via grunt but it was either that or a product -->
 		<link rel="stylesheet" href="application/listings/plugins/cloud.css"/>
@@ -26,17 +27,20 @@
 		
 		<systemheader></systemheader>
 
+
 		<!-- <section ng-include="'application/system/auth/auth-register.html'"></section> -->
 
-		<section class="ui-view-container">
-		<route-loading-indicator />
-<!-- http://fgnass.github.io/spin.js/#?lines=7&length=40&width=30&radius=0&corners=0.1&rotate=80&trail=60&speed=0.6&direction=1 -->
-			<ui-view autoscroll="false" ng-if='!isRouteLoading' class="fade"></ui-view>
-		</section>
+
+		<systemloader></systemloader>
+
+
+		<ui-view autoscroll="false" ng-if='!isRouteLoading' class="page-view"></ui-view>
+		
+
+		<!-- <systemfooter></systemfooter> -->
 
 
 	
-		<systemfooter></systemfooter>
 
 		<!-- Angular -->
 		<!-- // <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.js"></script> -->
@@ -74,9 +78,12 @@
 		<script src="application/system/header/HeaderDirective.js"></script>
 		<script src="application/system/footer/FooterCtrl.js"></script>
 		<script src="application/system/footer/FooterDirective.js"></script>
-		<!-- // System Auth- -> -->
+		<!-- // System Auth -->
 		<script src="application/system/auth/AuthFactory.js"></script>
 		<script src="application/system/auth/AuthCtrl.js"></script>
+		<!-- // System Loader -->
+		<script src="application/system/loader/loader.js"></script>
+		<script src="application/system/loader/LoaderDirective.js"></script>
 		<!-- // System Api - ->
 		<script src="application/system/SystemApi.js"></script>
 
