--- a/application/system/header/header.html
+++ b/application/system/header/header.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <!-- <li><a href="#/listings">Listings</a></li> -->
-        <li><a href="#/profile/i-want-to-cut-patterns">Profile</a></li>
+        <li><a href="#/profile/dskfjkdshf">Profile</a></li>
         <li><a href="#/account">Account</a></li>
 <!--         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
