--- a/application/cloud/cloud.html
+++ b/application/cloud/cloud.html
@@ -14,6 +14,21 @@
 		</div>
 	</div>
 	<div class="col-sm-4">
+		<main ng-controller="cpc as m">
+			<h1></h1>
+			<h2>Current LocalStorage value is = <em>{{m.value}}</em></h2>
+			<h2>Current LocalStorage skills   = <em>{{m.skills}}</em></h2>
+			<h2>Current LocalStorage filters  = <em>{{m.filters}}</em></h2>
+			<h2>Current LocalStorage activeUsers = <em>{{m.users}}</em></h2>
+			<input type="text" ng-model="m.value">
+			<input type="button" value="update" ng-click="m.update(m.value)">
+			<input type="text" ng-model="m.skills">
+			<input type="button" value="update" ng-click="m.persistSkills(m.skills)">
+			<input type="text" ng-model="m.filters">
+			<input type="button" value="update" ng-click="m.persistFilters(m.filters)">
+			<input type="text" ng-model="m.users">
+			<input type="button" value="update" ng-click="m.persistUsers(m.users)">
+		</main>
 		<div class="well">
 			<h4>Candidates</h4>
 			<ul>
