--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -3,7 +3,8 @@
 		<h2>"During previous ages, samurai were able to move between masters and even between occupations. However, during the Edo period, samurai were restricted, and were above all forbidden to become employed by another master without their previous master's permission." <span>Ni dieu ni maître</span></h2>
 	</div>
 </div> -->
-<cloud/>
+
+<cloud></cloud>
 
 <div class="row">
 	<div class="col-sm-3">
@@ -18,7 +19,7 @@
 		<div class="panel panel-default">
 			<div class="panel-body">
 				<h1>When</h1>
-				<p>Sometimes the interpersonal skills and life experience are fare more important that the pieces of paper and rote industry learning. Yes you do need people that know what they are talking about and can do the job but sometimes it's the way they do the job that's equally important. If you are looking for a new job and get frustrated that people dont take into account your personal attribute and skills dont </p>
+				<p>Sometimes the interpersonal skills and life experience are far more important that the pieces of paper and rote industry learning. Yes you do need people that know what they are talking about and can do the job but sometimes it's the way they do the job that's equally important. If you are looking for a new job and get frustrated that people dont take into account your personal attribute and skills dont </p>
 			</div>
 		</div>
 	</div>
