--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 		
 		<systemheader></systemheader>
 
+		<main ng-controller="cpc as m">
+  <h1></h1>
+  <h2>Current LocalStorage value is = <em></em></h2>
+  <input type="text" ng-model="m.value">
+  <input type="button" value="update" ng-click="m.update(m.value)">
+</main>
+
 
 		<!-- <section ng-include="'application/system/auth/auth-register.html'"></section> -->
 
