user reg bootstrapped

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<systemheader></systemheader>
 
 
-		<!-- <section ng-include="'application/system/auth/auth-register.html'"></section> -->
+		<section ng-include="'application/system/auth/auth-register.html'"></section>
 
 
 		<systemloader></systemloader>
