--- a/index.html
+++ b/index.html
@@ -25,19 +25,11 @@
 			<script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body class="system" ng-controller="AuthCtrl">
+	<body class="system">
 		
 		<systemheader></systemheader>
 
-		<main ng-controller="cpc as m">
-  <h1></h1>
-  <h2>Current LocalStorage value is = <em></em></h2>
-  <input type="text" ng-model="m.value">
-  <input type="button" value="update" ng-click="m.update(m.value)">
-</main>
-
-
-		<section ng-include="'application/system/auth/auth-register.html'"></section>
+		<!-- <section ng-include="'application/system/auth/auth-register.html'"></section> -->
 
 
 		<systemloader></systemloader>
