--- a/application/system/header/header.html
+++ b/application/system/header/header.html
@@ -26,18 +26,7 @@
           </ul>
         </li> -->
       </ul>
-      <form class="navbar-form navbar-right" role="search">
-      <div class="form-group">
-            <h5>Hello {{greeting}}</h5>
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" ng-model="inputEmail" placeholder="email">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" ng-model="inputPassword" placeholder="password">
-        </div>
-        <button class="btn btn-default" ng-click="login()" ng-submit="login">Sign In</button>
-      </form>
+      <section ng-include="'application/system/auth/auth-header.html'"></section>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
