resolving scope without controllerAs

--- a/application/home/home-layout.html
+++ b/application/home/home-layout.html
@@ -1,4 +1,5 @@
 <div class="experiment-home">
+{{test}}
 	<section class="home-welcome">
 	<!-- <div class="container"> -->
 		<article class="row">
