--- a/application/home/home-pitch.html
+++ b/application/home/home-pitch.html
@@ -10,7 +10,7 @@
 	<div class="col-sm-3">
 		<div class="panel panel-default">
 			<div class="panel-body">
-				<h1>What </h1>
+				<h1>What {{auth.test}}</h1>
 				<p>Finding employees is expensive. Whether your looking for a Loud Mouthed Accounts Administrator with Scaffolding experience, or a Polite Door Attendent with Arabic and Mixology, your in the right place.</p>
 		  	</div>
 		</div>
