--- a/application/system/header/header.html
+++ b/application/system/header/header.html
@@ -1,4 +1,4 @@
-<header> 
+<header >
 <!-- ng-controller="AuthCtrl"> -->
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
@@ -26,8 +26,9 @@
           </ul>
         </li> -->
       </ul>
-      <section ng-include="'application/system/auth/auth-header.html'"></section>
+      <systemauthlogin></systemauthlogin>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+<h1>auth {{auth}}</h1>
 </nav>
 </header>
